Varnish caching of ratings

--- a/postratings-css.css
+++ b/postratings-css.css
@@ -23,22 +23,34 @@
 	opacity: 1;
 	/* background-color: #ffffff; */
 }
+
 .post-ratings-loading {
-	display: none;
 	height: 16px;
 	text-align: left;
 }
+
 .post-ratings-image {
 	border: 0px;
 }
+
 .post-ratings IMG, .post-ratings-loading IMG, .post-ratings-image IMG {
 	border: 0px;
-	padding: 0px;
+	padding: 0px 10px 0px 0px;
 	margin: 0px;
 }
+
+.post-ratings-loading IMG {
+	display: none;
+}
+
 .post-ratings-text {
 }
+
 .post-ratings-comment-author {
 	font-weight: normal;
 	font-style: italic;
+}
+
+.ratings-scores {
+	position: absolute;
 }
